# ClipboardTurbo

./: Cargo.toml  README.md  build.rs  icon.rc
src/: clipboard.rs  errors.rs  gui.rs  main.rs
